clusters/cluster/apps/neuland-app/neuland-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuland-dashboard
  namespace: neuland-app
spec:
  type: ClusterIP
  selector:
    app: neuland-dashboard
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
