clusters/cluster/apps/neuland-app/neuland-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuland-dashboard
  namespace: neuland-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dashboard.neuland.app
    secretName: neuland-app-tls
  rules:
  - host: dashboard.neuland.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neuland-dashboard
            port:
              number: 3000
